# close_numerical_matches

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  main.yml  python-package.yml
close_numerical_matches/: __init__.py  find_matches.py  version.py
tests/: test_find_matches.py
